2004-12-12  Jan Nieuwenhuizen  <janneke@gnu.org>

	* mf/merge.pe.in: Set font names, version, license GPL.

	* make/substitute.make: Add FONTFORGE.

	* config.make.in (FONTFORGE): Add.

	* configure.in (gui_b): Use PATH_PROG for fontforge.

2004-12-11  Graham Percival  <gperlist@shaw.ca>

	* scm/define-markup-commands.scm: add baseline-skip to info
	about \column.

2004-12-11  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/font-metric.cc (ly:font-get-glyph-index): New function.

	* scm/output-gnome.scm (named-glyph): Use it.

	* scm/lily.scm (ly:all-stencil-expressions): Add named-glyph.

	* flower/string.cc (substitute_char): Rename, rewrite, modify this.
	(upper_string, lower_string, reverse_string): Remove.

	* configure.in (fontforge): Reinstate version check.

	* ly/engraver-init.ly: Fix clef glyph names.

	* lily/time-signature.cc (special_time_signature): Fix fraction
	glyph names.

2004-12-11  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* mf/merge.pe: new file.

	* lily/freetype.cc: new file.

	* lily/include/open-type-font.hh (class Open_type_font): new file.

	* lily/include/freetype.hh: new file.

	* lily/open-type-font.cc: new file.

	* lily/all-font-metrics.cc (find_otf): new function.

2004-12-11  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/time-signature.cc (special_time_signature): Fix.

	* configure.in (PKG_CONFIG_PATH): Remove stray `i'.  Check for
	GTK2 before checking for pango.  Fixes -fgnome.

	* lily/font-metric.cc (LY_DEFINE): Also rename C name to match
	Scheme name.

	* scm/define-markup-commands.scm:
	* scm/safe-lily.scm: Bugfix: ly:font-by-name.

	* configure.in: Require makeinfo 4.7 (needed for @ifdocbook).

	* stepmake/aclocal.m4 (STEPMAKE_GET_VERSION): Grok fontforge-like
	date versions.  Fixes configure.
	(STEPMAKE_CHECK_VERSION): Support optional actual program version
	argument.

2004-12-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* buildscripts/mf-to-table.py (write_ps_encoding): write real
	names in .enc
